updating backend to return requested model.  Adding styling and updating initial model

--- a/src/client/cell/cell.less
+++ b/src/client/cell/cell.less
@@ -9,6 +9,15 @@
 	&.block {
 		background: red;
 	}
+	&.start {
+		background: yellow;
+	}
+	&.end {
+		background: orange;
+	}
+	&.solution {
+		background: green;
+	}
 	&.unknown {
 		background: purple;
 	}
