--- a/src/client/app.less
+++ b/src/client/app.less
@@ -1,5 +1,4 @@
 h1 {
-  color: green;
   text-align: center;
 }
 
@@ -24,9 +23,13 @@ h1 {
 }
 
 .solve-button {
-  margin-top: 10px !important;
+  margin: 30px 0 !important;
 }
 
 .select-message {
   margin: 30px 0 20px;
+}
+
+body {
+  font-family: "Roboto";
 }
